src/test/deca/syntax/invalid/class/casting_null_null.deca
/// Description:
// 	  casting with null type
// 	
//  Resultats:
//    Syntax error
//    line 22
// Historique:
// 	  cree le 17/01/2023
class A {
    void f() {}
}
class B extends A {
    protected int x;
    void f() {
        this.x = 3;
    }
}

{
    B obj1 = new B();
    A obj2 = new A();
    obj2 = (null) (null);
}